{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 95,
  "lineage": "ba32fb3d-78e1-2c85-1f1a-a3d98ff013ad",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c13eab67c5d8861",
            "arn": "arn:aws:ec2:us-east-1:679711130733:instance/i-09efce58739c14c89",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09efce58739c14c89",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev_web_keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e21cd5b53b75a84b",
            "private_dns": "ip-10-10-1-55.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.55",
            "public_ip": "18.234.184.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-032a15f0b63bc295f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03dfaa390e0d00f43",
            "tags": {
              "Name": "DLW01"
            },
            "tags_all": {
              "Name": "DLW01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f62a85dcd375ef82"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.dev_web_igw",
            "aws_security_group.dev_web_sg",
            "aws_subnet.dev_web_subnet",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679711130733:internet-gateway/igw-0c5ecf40d07a44f8f",
            "id": "igw-0c5ecf40d07a44f8f",
            "owner_id": "679711130733",
            "tags": {
              "Name": "dev_web_igw"
            },
            "tags_all": {
              "Name": "dev_web_igw"
            },
            "vpc_id": "vpc-00362ab5df84f3dcc"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_web_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679711130733:route-table/rtb-02a8ab32875b464ad",
            "id": "rtb-02a8ab32875b464ad",
            "owner_id": "679711130733",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c5ecf40d07a44f8f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_web_rt"
            },
            "tags_all": {
              "Name": "dev_web_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00362ab5df84f3dcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_web_igw",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_web_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0053251a92aa5c37a",
            "route_table_id": "rtb-02a8ab32875b464ad",
            "subnet_id": "subnet-03dfaa390e0d00f43"
          },
          "dependencies": [
            "aws_internet_gateway.dev_web_igw",
            "aws_route_table.dev_web_rt",
            "aws_subnet.dev_web_subnet",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679711130733:security-group/sg-0f62a85dcd375ef82",
            "description": "Security Group for Dev Web environment",
            "egress": [],
            "id": "sg-0f62a85dcd375ef82",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "all ssh traffic from internet",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev_web_sg",
            "name_prefix": "",
            "owner_id": "679711130733",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_web_sg"
            },
            "tags_all": {
              "Name": "dev_web_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00362ab5df84f3dcc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679711130733:subnet/subnet-03dfaa390e0d00f43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dfaa390e0d00f43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "679711130733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_web_subnet"
            },
            "tags_all": {
              "Name": "dev_web_subnet"
            },
            "vpc_id": "vpc-00362ab5df84f3dcc"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:679711130733:vpc/vpc-00362ab5df84f3dcc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-06aa3a75bedd74773",
            "default_route_table_id": "rtb-0183040d999aafeb6",
            "default_security_group_id": "sg-0f2da5bc064ae486c",
            "dhcp_options_id": "dopt-04c8871ea0e1070a5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00362ab5df84f3dcc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0183040d999aafeb6",
            "owner_id": "679711130733",
            "tags": {
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Name": "dev_vpc"
            }
          }
        }
      ]
    }
  ]
}